name:               earley-facile
version:            0.1.0.0
synopsis:           Earley Facile
description:
    Simple earley parsing app for educational purposes.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/earley-facile
build-type:         Simple

library
    default-language:
        Haskell2010
    hs-source-dirs: src
    build-depends:
        base                >= 4.8      && < 5
      , containers          >= 0.5      && < 0.6
      , mtl                 >= 2.1      && < 2.3
      , transformers        >= 0.3      && < 0.5
      , pipes               >= 4.1      && < 4.2
      , optparse-applicative    >= 0.12     && < 0.13
--       , PSQueue             >= 1.1      && < 1.2
--       , data-partition      >= 0.3      && < 0.4
--       , mmorph              >= 1.0      && < 1.1
--       , dawg-ord            >= 0.5      && < 0.6
--       , data-lens-light     >= 0.1      && < 0.2
--       , random              >= 1.1      && < 1.2
--       , vector              >= 0.10     && < 0.12
--       , hashable            >= 1.2      && < 1.3
--       , hashtables          >= 1.2      && < 1.3
--       , data-memocombinators    >= 0.5  && < 0.6
-- 
--       -- only when debugging:
--       , time                >= 1.5      && < 1.7

    exposed-modules:
--         NLP.Partage.Core
        NLP.EarleyFacile

    ghc-options: -Wall
    cpp-options: -DDebugOn


executable earley-facile
    default-language:
        Haskell2010
    build-depends:
        earley-facile
      , base                    >= 4        && < 5
      -- , optparse-applicative    >= 0.12     && < 0.13
    hs-source-dirs: tools
    main-is: earley-facile.hs
    ghc-options: -Wall -O2 -threaded -rtsopts


source-repository head
    type: git
    location: https://github.com/kawu/earley-facile.git
